src/pages/pokemon-details/index.scss
@use './../../components/shared/global.scss' as global;

#pokemon-details {
  width: 1366px;
  margin: 0 auto;

  display: flex;
  flex-direction: column;
  gap: 8px;

  .content {
    width: 100%;
    overflow: hidden;
    display: grid;
    grid-template-columns: .9fr 2fr .9fr;
    gap: 8px;

    > div {
      border-radius: var(--global-border-radius);
      box-sizing: border-box;
      overflow: hidden;
    }

    &__actions {
      &__compare {
        display: flex;
        justify-content: flex-end;
        gap: 4px;

        svg {
          width: 22px;
          height: 22px;
        }

        &__icon-buttons {
          display: flex;
          gap: 4px;
        }
      }

      &__pokemon {
        display: flex;
        justify-content: flex-end;

        a {
          display: flex;
          align-items: center;

          button {
            gap: 8px;
          }
        }
      }
    }

    .pokemon__compare {
      width: 100%;
      display: flex;
      flex-direction: column;
      gap: 8px;

      .poke-search {
        &__suggestions__item__pokemon__avatar-name {
          img {
            width: 30px;
            height: 30px;
            margin-right: 6px;
          }
        }

        &__suggestions__item__pokemon__types-varieties {
          img {
            display: none;
          }
        }
      }
    }

    .pokemon {
      display: flex;
      flex-direction: column;
      justify-content: space-between;
      gap: 12px;
      width: 100%;
      background-color: var(--primary-color);
      padding: 24px;
      box-sizing: border-box;

      &__info {
        display: flex;
        flex-direction: column;
        gap: 18px;

        > div {
          display: flex;
          flex-direction: column;
          gap: 8px;

        }
      }
    }

    .pokemon__details {
      width: 100%;
      display: flex;
      flex-direction: column;
      gap: 8px;
      padding: 0;
    }
  }
}


@media (min-width: 320px) and (max-width: 1200px) {
  #pokemon-details {
    width: 100%;
    margin: 0 auto;

    display: flex;
    flex-direction: column;
    gap: 8px;

    .content {
      width: 100%;
      overflow: hidden;
      display: grid;
      grid-template-columns: auto;
      gap: 8px;

      > div {
        border-radius: 0;
      }

      &__actions {
        &__compare {
          display: none;
          order: 2;
        }

        &__pokemon {
          order: 3;
          display: none;
        }

        &__game-versions {
          order: 1;
          overflow: visible !important;
        }
      }

      .pokemon__compare {
        order: 6;

        .poke-search {
          display: none;
        }

        .poke-varieties {
          &__body {
            .variety {
              border-radius: 0;
            }
          }
        }
      }

      .pokemon__main {
        order: 4;
      }

      .pokemon__details {
        order: 5;

        .pokemon-shape {
          border-radius: 0;
        }

        .poke-items {
          padding: 0 12px;
        }
      }
    }
  }
}

